# cavin-tools

./: .gitignore  .releaserc.js  CHANGELOG.md  QUICKSTART.md  README.md  RELEASE.md  RUST_TOOLCHAIN_FIX.md  agents.md  cavin-tools.code-workspace  commitlint.config.js  index.html  logo_final_preview.html  logo_m_preview.html  logo_preview.html  logo_preview_v2.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/skills/svg_logo_creattor/: SKILL.md
.github/workflows/: build-tauri.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  completion_guidelines.md  project_overview.md  project_structure.md  suggested_commands.md
docs/: STYLE_ISSUES_REPORT.md  THEME_SYSTEM_IMPLEMENTATION.md  skills-sh-integration-implementation.md
docs/migration/: TIMELINE_ZOOM_MIGRATION.md
docs/plans/: 2025-01-08-timeline-zoom-enhancement-design.md  2025-01-08-timeline-zoom-implementation.md  2025-12-25-video-editor-design.md  2025-12-25-video-editor-implementation-plan.md  2026-01-16-image-editor-hybrid-architecture-design.md  2026-03-01-sticky-notes-design.md  TIMELINE_ZOOM_TEST_CHECKLIST.md  macos-network-extension-integration.md  macos-network-extension-plan.md
scripts/: generate-changelog.cjs  release.bat  release.sh  sync-version.cjs  test-changelog.cjs  update-version.cjs
src/: App.tsx  App.tsx.bak  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lib.rs.bak  main.rs  models.rs  updater.rs
src-tauri/src/background_remover/: mod.rs  model.rs  remove.rs  types.rs
src-tauri/src/cc_switch/: app_config.rs  app_store.rs  auto_launch.rs  claude_mcp.rs  claude_plugin.rs  codex_config.rs  config.rs  gemini_config.rs  gemini_mcp.rs  mod.rs  opencode_config.rs  panic_hook.rs  path_migration.rs  prompt_files.rs  provider.rs  settings.rs  store.rs  tray.rs  usage_script.rs
src-tauri/src/cc_switch/commands/: config.rs  deeplink.rs  env.rs  failover.rs  global_proxy.rs  import_export.rs  mcp.rs  misc.rs  plugin.rs  prompt.rs  provider.rs  proxy.rs  settings.rs  skill.rs  stream_check.rs  usage.rs
src-tauri/src/cc_switch/database/: backup.rs  migration.rs  mod.rs  schema.rs  tests.rs
src-tauri/src/cc_switch/database/dao/: failover.rs  mcp.rs  mod.rs  prompts.rs  providers.rs  proxy.rs  settings.rs  skill_cache.rs  skills.rs  stream_check.rs  universal_providers.rs
src-tauri/src/cc_switch/deeplink/: mcp.rs  parser.rs  prompt.rs  provider.rs  skill.rs  tests.rs  utils.rs
src-tauri/src/cc_switch/mcp/: claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs  validation.rs
src-tauri/src/cc_switch/proxy/: failover_switch.rs  forwarder.rs  handler_config.rs  handler_context.rs  handlers.rs  http_client.rs  model_mapper.rs  provider_router.rs  server.rs
src-tauri/src/cc_switch/proxy/providers/: adapter.rs  claude.rs  codex.rs  gemini.rs  mod.rs  transform.rs
src-tauri/src/cc_switch/proxy/usage/: logger.rs
src-tauri/src/cc_switch/services/: config.rs  env_manager.rs  mcp.rs  prompt.rs  proxy.rs  skill.rs  speedtest.rs  stream_check.rs  usage_stats.rs
src-tauri/src/cc_switch/services/provider/: endpoints.rs  gemini_auth.rs  live.rs  mod.rs  usage.rs
src-tauri/src/ffmpeg/: compress.rs  extract.rs  gif.rs  info.rs  mod.rs  speed.rs  thumbnails.rs  trim.rs
src-tauri/src/image/: batch.rs  collage.rs  convert.rs  crop.rs  flip.rs  info.rs  mod.rs  mosaic.rs  resize.rs  rotate.rs  save.rs  watermark.rs
src-tauri/src/image_converter/: convert.rs  info.rs  mod.rs  types.rs
src-tauri/src/network_capture/: mod.rs  process_list.rs  types.rs  windivert_download.rs
src-tauri/src/network_capture/certificate/: ca.rs  installer.rs  mod.rs
src-tauri/src/network_capture/proxy/: http_handler.rs  https_handler.rs  mod.rs  server.rs
src-tauri/src/network_capture/redirector/: macos.rs  mod.rs  types.rs  windows.rs
src-tauri/src/network_capture/store/: request_store.rs
src-tauri/src/process_manager/: mod.rs  platform.rs  port.rs  types.rs
src-tauri/src/sticky_notes/: mod.rs
src-tauri/src/watermark_remover/: detect.rs  mod.rs  remove.rs  types.rs
src/components/: FfmpegChecker.tsx  OperationQueuePanel.tsx  UpdateCompleteDialog.tsx  UpdateDialog.tsx
src/components/ControlPanel/: CompressPanel.tsx  ControlPanel.tsx  ExtractPanel.tsx  GifPanel.tsx  SpeedPanel.tsx  TrimPanel.tsx  index.ts
src/components/ProgressBar/: ProgressBar.tsx
src/components/ui/: button.tsx  (+8 more)
src/contexts/: OperationQueueContext.tsx
src/lib/: platform.ts  storageMigration.ts  updateUtils.ts  utils.ts
src/store/: videoStore.ts
src/types/: index.ts  timeline.ts
src/utils/: fileValidation.ts
~/.tauri/: myapp.key  myapp.key.pub
(+332 files in other folders)
