[package]
name = "video-editor"
version = "0.0.8"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "video_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "stream"] }
zip = "0.6"
base64 = "0.21"
tempfile = "3"
image = { version = "0.24", features = ["png", "jpeg", "gif", "webp", "bmp", "tiff", "ico"] }
# PNG 优化库
oxipng = "9.1"
imagequant = "4.4"
png = "0.17"

# 背景去除
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
ndarray = "0.15"       # 数组操作
dirs = "5.0"           # 系统目录
futures-util = "0.3"   # 异步流处理

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
