[package]
name = "mnemosyne"
version = "0.1.4"
description = "Mnemosyne - All-in-One Toolkit with AI Assistant"
authors = ["you"]
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "cavin_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
test-hooks = []

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# Tauri core with all features
tauri = { version = "2.8.2", features = ["tray-icon", "protocol-asset", "image-png"] }

# Tauri plugins
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.6"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "full"] }
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"

# HTTP client & server (cc-switch proxy)
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream", "socks"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1.0", features = ["full"] }
bytes = "1.5"

# Config & Data
toml = "0.8"
toml_edit = "0.22"
serde_yaml = "0.9"
dirs = "5.0"
tempfile = "3"
zip = "2.2"
url = "2.5"
base64 = "0.22"

# Database (cc-switch)
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
indexmap = { version = "2", features = ["serde"] }

# Utilities
regex = "1.10"
thiserror = "2.0"
anyhow = "1.0"
once_cell = "1.21.3"
rust_decimal = "1.33"
uuid = { version = "1.11", features = ["v4"] }
auto-launch = "0.5"

# JavaScript engine (cc-switch usage script)
rquickjs = { version = "0.8", features = ["array-buffer", "classes"] }

# Image processing (cavin-tools)
image = { version = "0.24", features = ["png", "jpeg", "gif", "webp", "bmp", "tiff", "ico"] }
oxipng = "9.1"
imagequant = "4.4"
png = "0.17"

# Background removal (cavin-tools)
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
ndarray = "0.15"

# Platform-specific: single instance (all desktop platforms)
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

# Platform-specific: Windows registry
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

# Platform-specific: macOS Objective-C bindings
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSColor"] }

# Release optimizations
[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "unwind"
strip = "symbols"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
